# lume-python

./: .gitignore  .release-please-manifest.json  .runemodules  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  release-please-config.json
.agents/rules/: architecture-application.md  architecture-business.md  architecture-data.md  architecture-integration.md  architecture-technology.md
.agents/rules/language-python/: anti-patterns.md  architecture-and-structure.md  code-style-and-formatting.md  configuration-and-environment.md  dependency-management.md  documentation-and-comments.md  error-handling.md  logging-and-observability.md  naming-conventions.md  performance-and-optimization.md  security-and-validation.md  testing-standards.md  type-safety.md
.agents/skills/posthog/: SKILL.md
.agents/skills/sentry/: SKILL.md
.agents/skills/windmill/: SKILL.md
.github/workflows/: release.yaml
src/lume/: __init__.py  config.py  logging.py
src/python_logging/: __init__.py  config.py  main.py  service.py
src/python_logging/integrations/: __init__.py  otel.py  windmill.py
tests/performance/: test_logging_concurrency.py
tests/property/: test_logging_properties.py
tests/unit/python_logging/: test_config.py  test_main.py  test_service.py
tests/unit/python_logging/integrations/: test_otel.py  test_windmill.py
