[project]
name = "python-logging"
version = "2026.1.2"
description = "Org-level Python logging package"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "structlog>=24.1.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mkinit>=1.2.0",
    "ruff>=0.15.16",
]
