[project]
name = "lume"
version = "1.0.0"
description = "Org-level Python logging package"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "structlog>=24.1.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "colorama>=0.4.6",
    "sentry-sdk>=3.0.0a7",
    "posthog>=7.20.3",
    "langfuse>=4.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mkinit>=1.2.0",
    "ruff>=0.15.16",
    "hypothesis>=6.0.0",
    "pytest-xdist>=3.0.0",
    "pyrefly>=1.1.1",
]

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit = false
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]
"src/lume/__init__.py" = [
    '__version__ = "{version}"',
]
